# rs-genomesub

./: .gitignore  Cargo.toml  README.md  Snakefile  Untitled.ipynb  Untitled1.ipynb  bin_uniref.drawio  config.yaml  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: rustdoc.yml
.ipynb_checkpoints/: Simulate_errors-checkpoint.ipynb
examples/: input_cabecalho.txt  input_multi.gff  input_multi.tbl  input_text.gff  input_text.txt  output_diamond.txt  output_diamond_sample.txt
implementors/core/clone/: trait.Clone.js
rs_genomesub/: all.html  index.html  sidebar-items.js
rs_genomesub/blast_tabular/: fn.parse_input.html  index.html  sidebar-items.js  struct.BlastFeature.html
rs_genomesub/prot_utils/: fn.parse_input.html  index.html  sidebar-items.js  struct.GeneticCodeTable.html
rs_genomesub/tbl/: enum.FeatureType.html  fn.parse_file.html  fn.parse_input.html  index.html  sidebar-items.js  struct.Feature.html  struct.Reader.html  struct.Record.html
src/: blastTabular.rs  blast_tabular.rs  chain.rs  lev_distance.rs  lib.rs  liftover.rs  protUtils.rs  prot_utils.rs  tbl.rs
src/doc/: blast_tabular.md  frame_stats.md  mod.rs
src/rs_genomesub/: blast_tabular.rs.html  lib.rs.html  prot_utils.rs.html  tbl.rs.html
src/tbl_rod/: tbl_rod.rs.html
src/uniref/: uniref.rs.html
tbl_rod/: all.html  fn.main.html  index.html  sidebar-items.js
tests/: cli.rs
uniref/: all.html  fn.get_genomic_sequence.html  fn.get_record_from_ena.html  fn.get_record_from_insilico_translation.html  fn.main.html  index.html  sidebar-items.js
(+9 files in other folders)
