[package]
name = "rs-genomesub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bio = "0.39.1"
bio-types = "0.12.1"
clap = "^2"
dissimilar = "1.0.3"
itertools = "0.10.3"
libflate = "1.1.2"
multimap = "0.8.3"
nom = "7.1.0"
nom-regex = "0.2.0"
nom-unicode = "0.3.0"
noodles-gff = "0.4.0"
ordered-multimap = "0.4.2"
protein-translate = "0.2.0"
regex = "1.5.4"
uniprot = "0.5.1"
ureq = "2.4.0"

[dev-dependencies]
assert_cmd = "1"
predicates = "2.1.1"
