[package]
name = "rs-genomesub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
bio = "0.39.1"
bio-types = "0.12.1"
clap = "^3"
dissimilar = "1.0.3"
itertools = "0.10.3"
libflate = "1.1.2"
flate2 = "1.0"
log = "0.4.16"
simplelog = { version = "^0.11.0", features = ["paris"] }
min-max = "0.1.8"
multimap = "0.8.3"
nom = "7.1.0"
nom-regex = "0.2.0"
nom-unicode = "0.3.0"
noodles = { version = "0.27", features = ["gff", "vcf", "core"] }
ordered-multimap = "0.4.2"
protein-translate = "0.2.0"
rayon = "1.5.1"
regex = "1.5.4"
uniprot = "0.5.1"
ureq = "2.4.0"
multipeek = "0.1.2"
bv = "0.11.1"
assert_cmd = "1"
itertools-num = "0.1.3"
which = "4.3"

[dev-dependencies]
assert_cmd = "1"
predicates = "2.1.1"
